--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,9 +3,12 @@
 }
 
 .page {
-  color: black;
+  color: black ;
   position: fixed;
-  right: 3%;
+  right: 1%;
+}
+.startOver {
+ color: #007185
 }
 
 .alignLeft {
@@ -17,8 +20,8 @@
 }
 
 .leftRights {
-  height: 50px;
   width: 50px;
+  height: 50px;
 }
 
 .productList {
@@ -29,17 +32,41 @@
 
 .aProduct {
   color:#007185;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-.amount {
+.prodImg {
+  width: 160px;
+  height: 160px;
+}
+
+.prodName {
+  max-width: 160px;
+  max-height: 80px;
+  overflow-wrap: 'break-word';
+}
+
+.prodReview {
+  width: 108px;
+  height: 18px;
+}
+
+.stars {
+  width: 16px;
+  height: 18px;
+}
+
+.prodPrice {
   color: #B12704;
+}
+
+.primeIcon {
+  width: 40px;
+  height: 20px;
 }
 
 .productHover {
   color: #CC6600;
   text-decoration: underline;
-}
-
-.prodRating {
-  display: inline;
 }
