--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -45,16 +45,15 @@
   color:#007185;
   padding-left: 5px;
   padding-right: 5px;
+  width: 15%;
 }
 
 .prodImg {
-  max-width: 160px;
-  max-height: 160px;
+  width: 99%;
+  height: 160px;
 }
 
 .prodName {
-  max-width: 160px;
-  max-height: 80px;
   overflow-wrap: 'anywhere';
   font-size: 14px;
 }
@@ -80,7 +79,7 @@
 
 .prodPrice {
   color: #B12704;
-  align-content: center
+  align-content: baseline;
 }
 
 .primeIcon {
